minor corrections to pom, updated README